bug fixed where collapsable navbar was being hidden behind carousel on smaller screens

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -43,7 +43,7 @@
 }
 
 .navbar-collapse {
-	height: 3rem;
+	/* height: 3rem; */
 	margin-top: 0.6rem;
 }
 
